--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
   </nav>
       <div class="jumbotron"  style="padding:40px;">
-        <h1> This is a Hello Message from  <span class="text-primary"> Abdurahim </span><span class="text-danger"> Learning Space </span></h1>
-        <p> Kudos to Everyone of you <span class="bg-info"> For </span> Building this Nodejs Project <span class="bg-success"> From Scratch </span></p>
+        <h1> This is a Hello Message from  <span class="text-primary"> Ankita </span><span class="text-danger"> Learning Space </span></h1>
+        <p> Congratualtions Ankita <span class="bg-info"> For </span> Building this Nodejs Project <span class="bg-success"> From Scratch </span></p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Keep Winning</a></p>
       </div>
     </div>
